--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,14 +1,28 @@
+[tasks.flash]
+script = [
+    "cargo objcopy --features right --bin yuki --release -- -O binary yuki.bin",
+    "echo \"press enter after the RIGHT board is in dfu ...\"",
+    "read",
+    "dfu-util -a 0 --dfuse-address 0x08000000:leave -D yuki.bin",
+
+    "cargo objcopy --bin yuki --release -- -O binary yuki.bin",
+    "echo \"press enter after the LEFT board is in dfu ...\"",
+    "read",
+    "dfu-util -a 0 --dfuse-address 0x08000000:leave -D yuki.bin"
+]
+
 [tasks.right]
 script = [
     "cargo objcopy --features right --bin yuki --release -- -O binary yuki.bin",
     "echo \"press enter after the reset button has been pressed ...\"",
     "read",
-    "dfu-util -a 0 --dfuse-address 0x08000000 -D yuki.bin"
+    "dfu-util -a 0 --dfuse-address 0x08000000:leave -D yuki.bin"
 ]
+
 [tasks.left]
 script = [
     "cargo objcopy --bin yuki --release -- -O binary yuki.bin",
     "echo \"press enter after the reset button has been pressed ...\"",
     "read",
-    "dfu-util -a 0 --dfuse-address 0x08000000:force -D yuki.bin"
+    "dfu-util -a 0 --dfuse-address 0x08000000:leave -D yuki.bin"
 ]
