--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ usb-device = "0.3"
 nb = "1"
 ssd1306 = "0.8"
 embedded-graphics = "0.8"
+ufmt = "0.2.0"
+heapless = { version = "0.7.16", features = ["ufmt-write", "ufmt-impl"] }
 
 [features]
 right = []
